src/test/deca/syntax/invalid/test_tokens_chaines.deca
// Description:
//    tests des chaines de caracteres
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe
//    test_lex ne doit pas donner d'erreur
//
// Historique:
//    crée le 11/01/2022

""
"une chaine normale" 
"un caractère échappé (\")"
"autre caractère echappé (\\)"
"une chaine avec //un commentaire"
